bugfix: colortitle align

--- a/src/themes/nbeat-white/jquery.mobile.colortitle.less
+++ b/src/themes/nbeat-white/jquery.mobile.colortitle.less
@@ -1,14 +1,15 @@
 @import "config.less";
-@colortitle-vpadding: 1px;
 
 .ui-colortitle {
-  padding-top:    @colortitle-vpadding;
-  padding-bottom: @colortitle-vpadding;
-  text-align: center;
-  font-weight: bold;
-  font-size: (50*@em_base);
-  h1 {
-    display: table;
-    margin:  auto;
-  }
+  height: (112 * @em_base);
+  overflow: hidden;
+  vertical-align: middle;
+    h1 {
+      margin-left:auto;
+      margin-right:auto;
+      display: table;
+      text-align: center;
+      font-weight: bold;
+      font-size: (50*@em_base);
+    }
 }
